--- a/styles/mdx.css
+++ b/styles/mdx.css
@@ -115,12 +115,12 @@ ol code {
 
 h1,
 h2 {
-  @apply mt-14 mb-2 !important;
+  @apply mt-20 mb-3 !important;
 }
 
 h1 a {
   /* @apply font-bold text-[17px] mb-5 mt-20 !important; */
-  @apply font-bold text-[24px] mb-5 mt-20 font-dahlia !important;
+  @apply font-bold text-[28px] mb-5 mt-20 font-dahlia !important;
 }
 
 h2 a {
@@ -132,11 +132,11 @@ h3 a {
 }
 
 p {
-  @apply !text-[16.5px] !font-medium !leading-8 !m-0 text-foregroundAlt;
+  @apply !text-[18px] !font-medium !leading-8 !m-0 text-foregroundAlt;
 }
 
 ul {
-  @apply pl-5 my-0 !important;
+  @apply pl-5 my-5 text-[18px] !important;
 }
 
 ul p {
